fix(merlin-www-main-navigation): Align promo to top of masthead

--- a/packages/merlin-www-main-navigation/sass/tatler/_promo.scss
+++ b/packages/merlin-www-main-navigation/sass/tatler/_promo.scss
@@ -2,7 +2,7 @@
     display: none;
     overflow: hidden;
     position: absolute;
-    top: 32px;
+    top: 24px;
 
     @include desktop-size {
         display: block;
